# src/main/resources/static/restDocs/openapi3.yaml
@@ -11,8 +11,8 @@ paths:
     get:
       tags:
       - Post
-      summary: 게시글 목록 조회
-      description: 게시글을 목록을 조회합니다.
+      summary: 게시글 목록 조회 API
+      description: 게시글 목록을 조회합니다.
       operationId: post-readList-success
       responses:
         "200":
@@ -20,7 +20,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/PostreadListRes"
+                $ref: "#/components/schemas/PostListRes"
               examples:
                 post-readList-success:
                   value: "{\r\n  \"isSuccess\" : true,\r\n  \"code\" : \"POST200_1\"\
@@ -31,7 +31,7 @@ paths:
     post:
       tags:
       - Post
-      summary: 게시글 생성
+      summary: 게시글 생성 API
       description: 새로운 게시글을 생성합니다.
       operationId: post-create-
       parameters:
@@ -432,7 +432,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/api-admin-reports-reportId-approve-1771465496"
+                $ref: "#/components/schemas/ApiResponse"
               examples:
                 report-approve-success:
                   value: "{\r\n  \"isSuccess\" : true,\r\n  \"code\" : \"COMMON200\"\
@@ -569,6 +569,19 @@ components:
         isSuccess:
           type: boolean
           description: API 성공 여부
+    ApiResponse:
+      title: ApiResponse
+      type: object
+      properties:
+        code:
+          type: string
+          description: API 응답 코드
+        message:
+          type: string
+          description: API 응답 메세지
+        isSuccess:
+          type: boolean
+          description: API 성공 여부
     ReportListRes:
       title: ReportListRes
       type: object
@@ -615,18 +628,8 @@ components:
         contentType:
           type: string
           description: 신고된 컨텐츠 타입
-    PostUpdateReq:
-      title: PostUpdateReq
-      type: object
-      properties:
-        title:
-          type: string
-          description: 수정된 게시글 제목
-        content:
-          type: string
-          description: 수정된 게시글 내용
-    PostreadListRes:
-      title: PostreadListRes
+    PostListRes:
+      title: PostListRes
       type: object
       properties:
         code:
@@ -658,6 +661,16 @@ components:
         isSuccess:
           type: boolean
           description: API 성공 여부
+    PostUpdateReq:
+      title: PostUpdateReq
+      type: object
+      properties:
+        title:
+          type: string
+          description: 수정된 게시글 제목
+        content:
+          type: string
+          description: 수정된 게시글 내용
     PostCreateReq:
       title: PostCreateReq
       type: object
